<resources>
    <string name="app_name">Imamu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--    Menu Texts-->
    <string name="menu_home">Home</string>
    <string name="menu_recipe">Rezepte</string>
    <string name="menu_cookbook">Kochbücher</string>
    <string name="menu_search">Suche</string>
    <string name="menu_shopping_list">Einkaufslisten</string>
    <string name="menu_recipe_suggestion">Rezeptsuche</string>
    <string name="menu_settings">Einstellungen</string>

    <!--    Actions  -->
    <string name="action_add_recipe">Rezept hinzufügen</string>
    <string name="action_add_ingredient">Zutat hinzufügen</string>
    <string name="action_back">Zurück</string>
    <string name="action_close">Schliessen</string>
    <string name="action_continue_times">Weiter zu Zeiten</string>
    <string name="action_continue_ingredients">Weiter zu Zutaten</string>
    <string name="action_continue_preparation">Weiter zur Zubereitung</string>
    <string name="action_continue_features">Weiter zu Eigenschaften</string>
    <string name="action_save">Speichern</string>
    <string name="action_delete">Löschen</string>
    <string name="action_edit">Bearbeiten</string>
    <string name="action_create_shopping_list">Einkaufsliste erstellen</string>
    <string name="action_add">Hinzufügen</string>
    <string name="action_show_all">Alle anzeigen</string>
    <string name="action_share">Teilen</string>
    <string name="action_start_search">Suche starten</string>
    <string name="action_go_to_detail">Detail</string>
    <string name="action_search">Suchen</string>
    <string name="action_create">Erstellen</string>
    <string name="action_import">Importieren</string>
    <string name="action_finish">Fertig</string>

    <!--    Hints  -->
    <string name="insert_recipe_title">Rezeptname eingeben</string>
    <string name="insert_recipe_ingredient">Zutat hinzufügen</string>
    <string name="insert_preparation_text">Zubereitung hinzufügen</string>
    <string name="insert_cook_book_title">Kochbuchname eingeben</string>
    <string name="insert_recipe_link">Rezeptlink eingeben</string>

    <!--    Component Descriptions  -->
    <string name="image_view_recipe_text">Bild des Gerichts</string>
    <string name="recipe_servings_text">Rezeptmenge</string>
    <string name="recipe_servings">Portionen</string>
    <string name="recipe_title_text">Gib deinem Rezept einen Titel</string>
    <string name="recipe_servings_description">Wähle eine angemessene Anzahl an Portionen, die du mit diesem Rezept schaffen kannst</string>
    <string name="recipe_preparation_time_description">Wie viel Zeit verbringst du aktiv mit der Zubereitung des Gerichts?</string>
    <string name="recipe_baking_time_description">Wie lange muss das Gericht gebacken werden?</string>
    <string name="recipe_rest_time_description">Wie lange muss dein Gericht ruhen?</string>
    <string name="recipe_description_step1">Für ein richtig gutes Rezept darf der Titel und ein Bild nicht fehlen – wähle bedacht.</string>
    <string name="recipe_description_step3">Welche Zutaten brauchst du für das Rezept?</string>
    <string name="recipe_description_step4">Formuliere eine Beschreibung, die erklärt, wie das Gericht zubereitet wird.</string>
    <string name="recipe_description_step5">Zum Abschluss füge deinem Rezept noch ein paar Eigenschaften hinzu.</string>
    <string name="add_recipe_image">Rezeptfoto hinzufügen</string>
    <string name="add_recipe_ingredient">Zutaten hinzufügen</string>

    <string name="ingredient">Zutat</string>
    <string name="ingredients">Zutaten</string>
    <string name="preparation">Zubereitung</string>
    <string name="difficulty">Schwierigkeit</string>
    <string name="difficulty_easy">Einfach</string>
    <string name="difficulty_normal">Mittel</string>
    <string name="difficulty_hard">Schwer</string>
    <string name="preparation_time">Zubereitungszeit</string>
    <string name="baking_time">Backzeit</string>
    <string name="rest_time">Ruhezeit</string>
    <string name="time_unit">min</string>
    <string name="amount">Menge</string>
    <string name="unit">Einheit</string>
    <string name="cook_book_title">Kochbuchname</string>
    <string name="recipes">Rezepte</string>
    <string name="type_of_recipe">Art des Gerichts</string>
    <string name="recipe_nutrition">Ernährung</string>
    <string name="recipe_time">Gesamtzeit</string>

    <string name="caption_favorites">Deine Favoriten</string>
    <string name="caption_last_viewed_recipes">Zuletzt geöffnete Rezepte</string>
    <string name="caption_last_viewed_cook_books">Zuletzt geöffnete Kochbücher</string>

    <string name="import_description">Hier kannst du Rezepte von Chefkoch und Kitchen Stories importieren. Dafür musst du den Link des gewünschten Rezepts in das vorgegebene Feld eingeben und den Download-Button klicken.</string>
    <string name="caption_chefkoch_preview_recipes">Vorschläge von Chefkoch</string>
    <string name="caption_kitchenstories_preview_recipes">Vorschläge von Kitchen Stories</string>

    <string name="caption_recipe_placeholder">Deine Rezeptsammlung ist leer</string>
    <string name="text_recipe_placeholder">Mache den ersten Schritt zu deiner großartigen Rezeptsammlung.</string>
    <string name="caption_cook_book_placeholder">Deine Kochbuchsammlung ist leer</string>
    <string name="text_cook_book_placeholder">Erstelle dein erstes Kochbuch und füge deine Lieblingsrezepte hinzu.</string>
    <string name="caption_shopping_list_placeholder">Keine Einkaufslisten vorhanden</string>
    <string name="text_shopping_list_placeholder">Erstelle eine Einkaufsliste, um deine Einkäufe zu organisieren.</string>


    <!-- Settings Texts -->
    <string name="import_settings_title">Rezeptimport</string>
    <string name="import_settings_summary">Verwalte Einstellungen bezüglich des Rezeptimports</string>

    <string name="download_images_title">Rezeptfotos lokal speichern</string>
    <string name="download_images_summary">Foto des importierten Rezepts lokal speichern</string>

    <string name="about_app_title">App Info</string>
    <string name="about_app_summary">App Info, Open Source Lizenzen</string>

    <string name="app_version_title">App Version</string>
    <string name="app_version_summary">Aktuelle Version: 1.0</string>

    <string name="open_source_license_title">Open Source Lizenzen</string>
    <string name="open_source_license_summary">Auflistung der verwendeten Open Source Lizenzen</string>


    <!-- Sample Texts -->
    <string name="sample_recipe_title">Beispiel Rezept</string>
    <string name="sample_ingredients">2 Tassen Vollmilch \n1 Ei \n250 Gramm Butter \n120 Gramm brauner Zucker</string>
    <string name="sample_preparation">1. Eier und Zucker mischen, solange bis sie cremig werden \n2. Butter hinzugeben \n4. Die Hälfte der Milch hinzugeben \n5. In einen Behälter geben und für 4 Stunden über Nacht in den Kühlschrank stellen</string>
    <string name="sample_ingredient_info">0 fehlende Zutaten</string>
    <string name="sample_servings_number">2 Portionen</string>
    <string name="sample_cook_book_title">Beispiel Kochbuch</string>
    <string name="sample_recipe_count">2</string>
    <string name="sample_ingredient">Paprika</string>
    <string name="sample_difficulty">Einfach</string>
    <string name="sample_time">120 min</string>
    <string name="sample_baking_time">Backzeit: 120 min</string>


    <string-array name="ingredient_units">
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>l</item>
        <item>TL</item>
        <item>EL</item>
        <item>Pck.</item>
        <item>Msp.</item>
        <item>Stk.</item>
    </string-array>
</resources>
