<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navView">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recipe_list"
            android:icon="@drawable/ic_recipe"
            android:title="@string/menu_recipe" />
        <item
            android:id="@+id/nav_cookbook"
            android:icon="@drawable/ic_cookbook"
            android:title="@string/menu_cookbook" />

        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_shopping_list"
            android:title="@string/menu_shopping_list" />

        <item
            android:id="@+id/nav_recipe_suggestion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_recipe_suggestion" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
