<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.github.tei.imamu.view.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_recipe_list"
        android:name="com.github.tei.imamu.view.recipe.RecipeListFragment"
        android:label="@string/menu_recipe"
        tools:layout="@layout/fragment_recipe_list">
        <action
            android:id="@+id/action_recipeListFragment_to_addRecipeFragment"
            app:destination="@id/addRecipeFragment" />
    </fragment>

    <fragment
        android:id="@+id/addRecipeFragment"
        android:name="com.github.tei.imamu.view.recipe.AddRecipeFragment"
        android:label="@string/action_add_recipe"
        tools:layout="@layout/fragment_add_recipe">
        <action
            android:id="@+id/action_addRecipeFragment_to_recipeListFragment"
            app:destination="@id/nav_recipe_list" />
    </fragment>
</navigation>