<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.github.tei.imamu.viewmodel.recipe.AddRecipeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/description_background"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/peach"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_preparation_description"
            style="@style/caption_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_recipe_padding"
            android:layout_marginTop="@dimen/default_recipe_padding"
            android:layout_marginEnd="@dimen/default_recipe_padding"
            android:layout_marginBottom="@dimen/default_recipe_padding"
            android:text="@string/recipe_description_step5"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toBottomOf="@id/description_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_recipe_type"
            style="@style/caption_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_recipe_padding"
            android:layout_marginTop="@dimen/default_recipe_margin"
            android:layout_marginEnd="@dimen/default_recipe_padding"
            android:text="@string/type_of_recipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_background"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_recipe_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_recipe_margin"
            android:layout_marginEnd="@dimen/default_recipe_margin"
            android:layout_marginTop="@dimen/default_recipe_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_recipe_type"
            app:chipSpacingHorizontal="8dp"
            app:singleSelection="true"/>

        <View
            android:id="@+id/first_divider"
            style="@style/Divider"
            android:layout_marginStart="@dimen/default_recipe_margin"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="@dimen/default_recipe_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group_recipe_type" />

        <TextView
            android:id="@+id/text_view_recipe_nutrition"
            style="@style/caption_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_recipe_padding"
            android:layout_marginTop="@dimen/default_recipe_margin"
            android:layout_marginEnd="@dimen/default_recipe_padding"
            android:text="@string/recipe_nutrition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_divider"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_nutrition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_recipe_margin"
            android:layout_marginEnd="@dimen/default_recipe_margin"
            android:layout_marginTop="@dimen/default_recipe_padding"
            app:chipSpacingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_recipe_nutrition"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="@dimen/default_recipe_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/action_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>